<?xml version="1.0"?>
<package format="2">
  <name>ros_msgs_sync</name>
  <version>0.0.0</version>
  <description>
    The ros_img_sync package
    This package provides the class SubcriberParametersBase which synchronizes ros messages (up to 9).
  </description>

  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <license>Apache-2.0</license>

  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
